--- a/index.css
+++ b/index.css
@@ -46,7 +46,8 @@ html,body {
 	width:100px;
 	height:100%;
 	float:left; 
-	background: #3E3E3E;
+	background: #EAEAEA;
+	box-shadow:inset 0px 0px 40px 1px black;
 	margin-left:10px;
 }
 
@@ -122,7 +123,7 @@ li {
 #menu {
 	display:inline-block;
 	float:left;
-	width:200px;
+	width:160px;
 	height:40px;
 	background: #2A2A2A;
 	margin-left:20px;
@@ -137,6 +138,9 @@ li {
 	margin-left:-20px;
 	margin-top:-20px;
 	background: #F92E2E;
-	text-align: center;
 	line-height: 40px;
+}
+
+#menubutton span {
+	margin-left:50px;
 }
