--- a/editor/css/index.css
+++ b/editor/css/index.css
@@ -38,7 +38,8 @@ html,body{
     margin-left:120%;
 }
 
-#clearEditor {
+#previewButton,#clearEditor,#backToEditor {
+    margin-right:20px;
     display:inline-block;
     margin-top:6px;
 }
