--- a/editor/css/index.css
+++ b/editor/css/index.css
@@ -1,6 +1,5 @@
 html,body{
     width:100%;
-    height:100vh;
     margin:0px;
     overflow-x:hidden;
 }
@@ -32,10 +31,14 @@ html,body{
     color:#636363;
 }
 
-#publish {
+#done {
     display: inline-block;
     position:relative;
     margin-left:120%;
+}
+
+#edit {
+    margin-left:5%;
 }
 
 #previewButton,#clearEditor,#backToEditor {
@@ -51,10 +54,6 @@ html,body{
 .title:empty:before,.content:empty:before {
     content:attr(data-placeholder);
     color:gray;
-}
-
-#inputContainer {
-    background:red;
 }
 
 @font-face {
