--- a/editor/css/index.css
+++ b/editor/css/index.css
@@ -41,10 +41,23 @@ html,body{
     margin-left:5%;
 }
 
-#previewButton,#clearEditor,#backToEditor {
+#previewButton,#clearEditor,#backToEditor,#replace {
     margin-right:20px;
     display:inline-block;
     margin-top:6px;
+}
+
+.animate {
+    animation:changeColor 4s;
+}
+
+@keyframes changeColor {
+    from {
+        background:yellow;
+    }
+    to {
+        background: white;
+    }
 }
 
 #displayText {
