--- a/editor/css/index.css
+++ b/editor/css/index.css
@@ -4,6 +4,23 @@ html,body{
     overflow-x:hidden;
 }
 
+#loading {
+    position:absolute;
+    margin-top:-100%;
+    width:40%;
+    height:40vh;
+    text-align:center;
+    font-size:40px;
+    line-height: 240px;
+    background: black;
+    color:white;
+    font-family:Montserrat;
+    border-radius:20px;
+    margin-left: 30%;
+    top:100px;
+    z-index:5;
+}
+
 #inputText {
     display: inline-block;
     width:90%;
@@ -35,13 +52,14 @@ html,body{
     display: inline-block;
     position:relative;
     margin-left:120%;
+    margin-top:20px;
 }
 
 #edit {
     margin-left:5%;
 }
 
-#previewButton,#clearEditor,#backToEditor,#replace {
+#previewButton,#clearEditor,#backToEditor,#replace,#instructionButton,#hideInstructionButton {
     margin-right:20px;
     display:inline-block;
     margin-top:6px;
@@ -49,6 +67,10 @@ html,body{
 
 .animate {
     animation:changeColor 4s;
+}
+
+.animate:hover {
+    background:yellow;
 }
 
 @keyframes changeColor {
@@ -67,6 +89,35 @@ html,body{
 .title:empty:before,.content:empty:before {
     content:attr(data-placeholder);
     color:gray;
+}
+
+#instructions {
+    display:none;
+    font-weight: bold;
+    position:absolute;
+    top:52px;
+    width:100%;
+    height:100vh;
+    background: white;
+    z-index: 4;
+}
+
+code {
+    font-size:17px !important;  
+}
+
+#instructionsHeader {
+    font-size: 20px;
+}
+
+#instructionsHeader span {
+    display: inline-block;
+    margin-top:20px;
+}
+
+.panel {
+    text-align: left;
+    width:96%;
 }
 
 @font-face {
