add landing page

--- a/dependencies/main.css
+++ b/dependencies/main.css
@@ -7,7 +7,7 @@ html,body {
 
 .header {
 	width:100%;
-	height:10vh;
+	height:68px;
 	border-bottom:4px solid #008AFF;
 	background: black;
 	overflow:hidden; 
