--- a/dependencies/home.css
+++ b/dependencies/home.css
@@ -42,4 +42,10 @@ a:link,a:visited {
 	.option {
 		font-size:14px;
 	}
+	.projectContainer,.projectImage,.svgContainer,.svgImage{
+		width:220px !important;
+		margin:0px !important;
+		padding:0px !important;
+		margin-top:20px !important;
+	}
 }
