--- a/TodoApp-React/index.css
+++ b/TodoApp-React/index.css
@@ -4,3 +4,50 @@ html,body {
 	height:100vh;
 	margin:0px;
 }
+
+.header {
+	width:100%;
+	height:80px;
+	font-size:40px;
+	text-align:center;
+	line-height:80px;
+	background:#FEC63F;
+	font-family:Molle;
+	border-bottom:2px solid #393939;
+}
+
+.board {
+	width:80%;
+	background:#F3F3F3;
+}
+
+.addEvent{
+	margin-top:40px;	
+	width:40%;
+	background:none;
+	border:0px;
+	outline-width:0px;
+	border-bottom:1px solid #5C5C5C;
+	font-family: Reem Kufi;
+	font-size: 20px;
+	text-align: center;
+}
+
+.addEventButton {
+	display:inline-block;
+	background:#5D93E4;
+	padding:8px;
+	border-radius: 6px;
+	font-weight:bold;
+	font-family: Reem Kufi;
+	margin-left:20px;	
+	cursor:pointer;
+}
+
+.emptyTask{
+	display: inline-block;
+	margin-top:40px;
+	font-size:26px;
+	font-family:Reem Kufi;
+	color:#8C8C8C;
+}
