--- a/css/common.less
+++ b/css/common.less
@@ -21,20 +21,41 @@
     #intro-box {
       width: 100% !important;
       margin-top: 13vh !important;
+      padding: 0px 10px !important;
       #intro-text {
         font-size: 40px !important;
       }
       #intro-interest-container{
           width: 226px;
           display: inline-block;
+          margin-top: 6vh !important;
         .intro-interest {
           width: 218px;
           display: inline-block;
           margin: 6px 4px !important;
         }
       }
+      #intro-button {
+        margin-top: 6vh !important;
+        .intro-button-arrow {
+          display: none !important;
+        }
+      }
+    }
+    #header {
+      .moving-menu-item {
+        width: 70px !important;
+      }
+      .menu-item {
+        width: 70px !important;
+        font-size: 14px !important;
+      }
     }
     #about-section {
+      .left-content {
+          width: 100% !important;
+          padding: 0px 10px !important;
+      }
       .right-content{
         margin-left: 0px;
         .skill-value {
