--- a/css/introSection.less
+++ b/css/introSection.less
@@ -1,12 +1,19 @@
 @import "colorDefinations";
 
 #intro-section {
+  position: relative;
   width:100%;
   height: calc(~"100vh - 65px");
   background: @customBlack;
   text-align: center;
   box-sizing: border-box;
   border-bottom: 1px solid @customBlue;
+  #canvas-container {
+    top: 0vh;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
   #intro-svg {
     position: absolute;
     top:0px;
@@ -25,6 +32,7 @@
     }
   }
   #intro-box {
+    position: relative;
     display: inline-block;
     margin-top: 30vh;
     width: 650px;
