--- a/css/aboutSection.less
+++ b/css/aboutSection.less
@@ -6,7 +6,7 @@
   position: relative;
   #about-intro {
     color: white;
-    padding: 120px;
+    padding: 120px 20px;
     padding-bottom: 100px; 
     font-family: Quicksand;
     font-weight: bold;
@@ -34,7 +34,8 @@
         .skill-category-header {
           background: #f9f9f9;
           text-align: left;
-          width: 300px;
+          width: 30%;
+          min-width: 196px;
           padding: 5px 10px;
           color: @themePurple;
           border-top-right-radius: 4px;
