--- a/css/introSection.less
+++ b/css/introSection.less
@@ -40,6 +40,7 @@
   #intro-box {
     display: inline-block;
     margin-top: 5vh;
+    box-sizing: border-box;
     #intro-text {
       padding: 0px 10px;
       color: @customHeaderPurple;
