--- a/css/common.less
+++ b/css/common.less
@@ -74,4 +74,18 @@
       }
     }
   }
+  #resume-section {
+    #resume-content-container {
+      #resume-content {
+        #view-online, #download {
+          padding: 100px 20px !important;
+        }
+      }
+    }
+  }
+  #contact-section {
+    #contact-form-container {
+      width: 94% !important;
+    }
+  }
 }
