--- a/css/timeline.less
+++ b/css/timeline.less
@@ -15,7 +15,6 @@
     }
     position: relative;
     background: @themePurple;
-    height: 230px;
     color: #fff;
     #heading {
         display: inline-block;
@@ -60,9 +59,8 @@
     display: inline-block;
     border-radius: 4px;
     color: @customHeaderPurple;
-    margin-left: 40px;
     border: 2px solid @customHeaderPurple;
-    height: 98px;
+    min-width: 18%;
     .customTip {
       position: absolute;
       display: inline-block;
@@ -92,35 +90,35 @@
     }
   }
   .customTooltipFirst {
-    width: 309px;
+    margin-right: 20px;
     .customTip{
       width: 29px;
       left: -29px;
     }
   }
   .customTooltipSecond {
-    width: 270px;
+    margin-left: 20px;
     .customTip{
       width: 27px;
       left: 290px;
     }
   }
   .customTooltipThird {
-    width: 270px;
+    margin-right: 20px;
     .customTip{
       width: 29px;
       left: -29px;
     }
   }
   .customTooltipFourth {
-    width: 270px;
+    margin-left: 20px;
     .customTip{
       width: 27px;
       left: 290px;
     }
   }
   .customTooltipFifth {
-    width: 270px;
+    margin-right: 20px;
     .customTip{
       width: 29px;
       left: -29px;
