--- a/css/timeline.less
+++ b/css/timeline.less
@@ -3,6 +3,7 @@
 #timeline-section {
   margin-top: -120px;
   #timeline-section-heading {
+    padding: 20px;
     .background-overlay {
       position: absolute;
       background: url(../images/confetti2.svg);
