--- a/css/contact.less
+++ b/css/contact.less
@@ -70,7 +70,7 @@
                 border: 2px solid @themePurple;
                 font-weight: bold;
                 font-family: Raleway;
-                margin-bottom: 40px;
+                margin-bottom: 20px;
                 margin-top: 30px;
                 transition: color 0.4s, background 0.4s;
                 cursor: pointer;
@@ -78,6 +78,20 @@
                     color: #fff;
                     background: @themePurple;
                 }
+            }
+            #submit-contact-form-helper-text {
+                display: none;
+                font-family: Quicksand;
+                font-size: 16px;
+                font-weight: bold;
+                padding: 6px 12px;
+                border-radius: 12px;
+            }
+            .submit-contact-form-helper-text-success {
+                color: rgb(0, 128, 57);
+            }
+            .submit-contact-form-helper-text-fail {
+                color: rgb(141, 33, 0);
             }
         }
     }
