fix contact form styles

--- a/css/contact.less
+++ b/css/contact.less
@@ -80,18 +80,19 @@
                 }
             }
             #submit-contact-form-helper-text {
-                display: none;
+                display: inline-block;
                 font-family: Quicksand;
                 font-size: 16px;
-                font-weight: bold;
-                padding: 6px 12px;
-                border-radius: 12px;
+                padding: 1px 7px;
+                border-radius: 4px;
+                margin-top: -14px;
+                color: #fff;
             }
             .submit-contact-form-helper-text-success {
-                color: rgb(0, 128, 57);
+                background: #005d29;
             }
             .submit-contact-form-helper-text-fail {
-                color: rgb(141, 33, 0);
+                background: #8a0000;
             }
         }
     }
