--- a/src/css/timeline.less
+++ b/src/css/timeline.less
@@ -42,7 +42,7 @@
     margin-top: 100px;
     svg {
       width: 42px;
-      height: 1200px;
+      height: 1400px;
       line {
         stroke: @customHeaderPurple;
         stroke-width: 4;
@@ -123,6 +123,13 @@
     .customTip{
       width: 29px;
       left: -29px;
+    }
+  }
+  .customTooltipSixth {
+    margin-left: 20px;
+    .customTip{
+      width: 27px;
+      left: 290px;
     }
   }
 }
