--- a/src/css/timeline.less
+++ b/src/css/timeline.less
@@ -42,7 +42,7 @@
     margin-top: 100px;
     svg {
       width: 42px;
-      height: 1400px;
+      height: 1800px;
       line {
         stroke: @customHeaderPurple;
         stroke-width: 4;
@@ -90,42 +90,14 @@
       }
     }
   }
-  .customTooltipFirst {
+  .customTooltipFirst, .customTooltipThird, .customTooltipFifth, .customTooltipSeventh {
     margin-right: 20px;
     .customTip{
       width: 29px;
       left: -29px;
     }
   }
-  .customTooltipSecond {
-    margin-left: 20px;
-    .customTip{
-      width: 27px;
-      left: 290px;
-    }
-  }
-  .customTooltipThird {
-    margin-right: 20px;
-    .customTip{
-      width: 29px;
-      left: -29px;
-    }
-  }
-  .customTooltipFourth {
-    margin-left: 20px;
-    .customTip{
-      width: 27px;
-      left: 290px;
-    }
-  }
-  .customTooltipFifth {
-    margin-right: 20px;
-    .customTip{
-      width: 29px;
-      left: -29px;
-    }
-  }
-  .customTooltipSixth {
+  .customTooltipSecond, .customTooltipFourth, .customTooltipSixth, .customTooltipEigth {
     margin-left: 20px;
     .customTip{
       width: 27px;
